# ForenXtract

./: .gitignore  LICENSE  README.md  RFI_install.sh  Report_2026-FINAL-001_20260213.txt  forensic_qt6.ui  main_qt6.py  pyproject.toml  requirements.txt  rfi-acquire  rfi_verify.py  test_lz4.py  triage_evidence_20260220_152901.txt
.github/workflows/: python-ci.yml
codes/: acquisition.py  analysis.py  dependency_checker.py  gui.py  logger.py  report_engine.py  threads.py
fx/: __init__.py
fx/audit/: logger.py  signing.py  syslog_handler.py  verify.py
fx/cli/: acquire.py  verify.py
fx/core/: validation.py
fx/core/acquisition/: aff4.py  base.py  dead.py  ewf.py  raw.py  verify.py
fx/report/: dashboard.py  report_engine.py
fx/triage/: orchestrator.py
fx/ui/: gui.py
fx/ui/resources/: forensic_qt6.ui
remote_forensic_imager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rfi/: __init__.py
rfi/audit/: logger.py  syslog_handler.py
rfi/cli/: acquire.py  verify.py
rfi/core/acquisition/: base.py  verify.py
rfi/report/: report_engine.py
rfi/triage/: memory.py  network.py  orchestrator.py  processes.py
rfi/ui/: gui.py  workers.py
rfi/ui/resources/: forensic_qt6.ui
tests/: test_acquisition.py  test_core.py  test_triage.py
