[project]
name = "remote-forensic-imager"
version = "3.1.0"
description = "Remote forensic acquisition tool with structured audit logging and report generation"
authors = [{ name = "Futhark1393" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "PyQt6>=6.6",
    "qt-material>=2.14",
    "paramiko>=3.0",
    "fpdf2>=2.7.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
aff4 = ["pyaff4"]

[project.scripts]
rfi = "rfi.ui.gui:main"
rfi-acquire = "rfi.cli.acquire:main"
rfi-verify = "rfi.cli.verify:main"

[tool.setuptools.packages.find]
where = ["."]
